# kfp-sample

./: README.md  pipeline.py  pipeline.yaml  pyproject.toml
components/task1/: component.yaml
